# kubesurveyor

./: .gitignore  DEVELOPMENT  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
kubesurveyor/: main.py
