[tool.poetry]
name = "kubesurveyor"
version = "2.0.0"
description = "Good enough Kubernetes namespace visualization tool"
authors = ["Peter Gasper <peter@gasper.cc>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/viralpoetry/kubesurveyor"
repository = "https://github.com/viralpoetry/kubesurveyor"
keywords = ["kubernetes", "graphviz", "visualisation"]
include = [
    "LICENSE",
]
classifiers = [
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0.2"
graphviz = "^0.20.3"
kubernetes = "^30.1.0"

[tool.poetry.scripts]
kubesurveyor = "kubesurveyor.main:parse_args"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
